--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
+    touch-action: none;
 }
 #packing-area {
     margin: 30px;
