--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     min-height: 100%;
     width: 100%;
     margin: 0;
-    padding: 30px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -14,6 +13,7 @@ body {
 }
 
 #arena-wrapper {
+    margin: 30px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
