--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #arena-wrapper {
-    margin: 30px;
+    margin: 30px 30px calc(30px + 2em) 30px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -57,6 +57,27 @@ body {
     z-index: 20;
 }
 
+#stats-bar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    z-index: 15;
+    height: 2em;
+}
+.stats-entry {
+    display: flex;
+    align-items: center;
+}
+.stats-label::after {
+    content: ":";
+}
+.stats-label, .stats-value {
+    padding: 3px 5px 3px 5px;
+}
+
 /* beautification */
 
 #arena, .item {
@@ -65,6 +86,9 @@ body {
 #inventory, .bin {
     box-shadow: 0 0 0 1px rgba(0,0,0,0.3);
     flex-shrink: 0;
+}
+#stats-bar {
+    background: rgba(0, 0, 0, 0.2);
 }
 
 .item {
