--- a/style.css
+++ b/style.css
@@ -119,16 +119,24 @@ body {
 
  @media (prefers-color-scheme: dark) {
     body {
-      background-color: black;
-      color: black;
+        background-color: rgb(27, 30, 32);
+        color: black;
+        --bar-color: rgb(33, 36, 37);
+        --whitish-tint: rgba(255, 255, 255, 0.7);
+        --light-shadow: rgba(255,255,255,0.2);
     }
     .bar {
-    background: rgb(204,204,204);
+        background-color: var(--bar-color);
+        color: var(--whitish-tint);
     } 
     #arena {
-     box-shadow: 0 1px 2px rgba(255,255,255,0.7), 0 1px 3px 1px rgba(255,255,255,0.7);  
+        box-shadow: 0 1px 2px var(--light-shadow), 0 1px 3px 1px var(--light-shadow);  
+    }
+    .item {
+        filter: brightness(0.9);
     }
     #inventory, .bin {
-        background-image: linear-gradient(to right, rgba(255,255,255,0.6) 1px, transparent 1px), linear-gradient(to bottom, rgba(255,255,255,0.6) 1px, transparent 1px);
+        background-image: linear-gradient(to right, rgba(255,255,255,0.15) 1px, transparent 1px), 
+        linear-gradient(to bottom, rgba(255,255,255,0.15) 1px, transparent 1px);
     } 
 } 
