--- a/style.css
+++ b/style.css
@@ -206,3 +206,51 @@ body {
     background-color: rgba(128, 128, 128, 0.8);
     opacity: 0.5;
 }
+
+#msg-list {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+}
+#msg-list > li {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 0.3em;
+    margin-top: 0.6em;
+}
+.msg-text {
+    flex-grow: 1;
+    padding: 0.6em 1em;
+}
+#msg-list > li.error {
+    color: #721c24;
+    background-color: #f8d7da;
+}
+#msg-list > li.warning {
+    color: #856404;
+    background-color: #fff3cd;
+}
+#msg-list > li.success {
+    color: #155724;
+    background-color: #d4edda;
+}
+.msg-close-btn {
+    font-size: 1.5em;
+    flex-grow: 0;
+    width: 2rem;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+    user-select: none;
+}
+.msg-close-btn:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.msg-close-btn:active {
+    background-color: rgba(0, 0, 0, 0.2);
+}
