ngForm: remove default choice and forbid empty submit

--- a/style.css
+++ b/style.css
@@ -243,6 +243,8 @@ body {
     align-self: center;
     padding: 0.2rem 1rem;
     font-size: 1rem;
+}
+#ng-submit:not([disabled]) {
     cursor: pointer;
 }
 #solve-menu.enabled {
