--- a/style.css
+++ b/style.css
@@ -301,7 +301,8 @@ header .heading {
     display: flex;
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 0.3em;
-    margin-top: 0.6em;
+    margin: 0.6em;
+    margin-bottom: 0;
 }
 .msg-text {
     flex-grow: 1;
