use `display: none` on #item-info-bar
Using `visibility: hidden` was capturing touch events.

--- a/style.css
+++ b/style.css
@@ -92,7 +92,9 @@ footer {
 
 #item-info-bar {
     bottom: 2em;
-    visibility: hidden;
+}
+#item-info-bar.disabled {
+    display: none;
 }
 .bar {
     display: flex;
