--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    align-items: center;
     overflow-y: scroll;
     --tint: rgba(0, 0, 0, 0.1);
     --heavy-tint: rgba(0, 0, 0, 0.2);
