--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 #arena.large {
     align-self: flex-start;
 }
-#gas {
+body > .gas {
     flex-grow: 1;
 }
 footer {
@@ -245,6 +245,7 @@ footer {
     display: flex;
     overflow: hidden;
     align-self: stretch;
+    flex-shrink: 0;
     border-bottom: 1px solid var(--heavy-tint);
     border-radius: 0.5rem 0.5rem 0 0;
 }
@@ -254,6 +255,9 @@ footer {
     display: flex;
     flex-grow: 1;
     justify-content: space-around;
+}
+.menu-body {
+    overflow-y: auto;
 }
 .menu.disabled, .toolbar.disabled {
     display: none;
@@ -266,6 +270,7 @@ footer {
     flex-direction: column;
     align-self: center;
     align-items: stretch;
+    max-height: 100%;
 }
 .menu:not(.disabled).loading {
     background-color: var(--menu-color-loading);
@@ -394,4 +399,37 @@ textarea {
     top: 0;
     z-index: 1000;
     pointer-events: none;
+}
+
+#modal-group {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2000;
+    pointer-events: none;
+}
+#modal-group > .overlay {
+    position: fixed;
+    z-index: 1990;
+    width: 100%;
+    height: 100%;
+}
+.menu:not(.disabled) ~ .overlay {
+    pointer-events: auto;
+    background-color: hsla(0, 0%, 10%, 0.8);
+}
+#modal-group > .menu {
+    z-index: 2010;
+    pointer-events: auto;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.4), 0 4px 12px 4px rgba(0,0,0,0.2);
+}
+#modal-group > .gas {
+    width: 100%;
+    height: 100px;
+    flex-shrink: 9999999;
 }
