--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     --menu-color-heavy: hsl(0, 0%, 65%);
     --menu-color-heavy2: hsl(0, 0%, 55%);
     --menu-color-heavy3: hsl(0, 0%, 45%);
+    --bar-color: hsla(0, 0%, 80%, 0.8);
     --large-shadow: 0 4px 8px rgba(0,0,0,0.4), 0 4px 12px 4px rgba(0,0,0,0.2);
     --small-shadow: 0 1px 2px rgba(0,0,0,0.3), 0 1px 3px 1px rgba(0,0,0,0.15);
     --bin-outline-color: rgba(0, 0, 0, 0.3);
@@ -156,7 +157,7 @@ footer {
     box-shadow: 0 0 3px 1px rgb(191, 0, 0);
 }
 .bar {
-    background-color: var(--menu-color);
+    background-color: var(--bar-color);
 }
 
 .item {
